# Kassiopeia

./: CMakeLists.txt  CMakeLists.txt~
KEMField/: CMakeLists.txt
KEMField/Source/Bindings/: CMakeLists.txt
KEMField/Source/Bindings/FieldSolvers/Magnetic/include/: KMagneticFastMultipoleFieldSolverBuilder.hh
KEMField/Source/Bindings/FieldSolvers/Magnetic/src/: KMagneticFastMultipoleFieldSolverBuilder.cc
KEMField/Source/Bindings/Fields/Magnetic/include/: KMagnetostaticBoundaryFieldBuilder.hh
KEMField/Source/BoundaryIntegrals/Magnetostatic/: CMakeLists.txt
KEMField/Source/BoundaryIntegrals/Magnetostatic/Analytic/include/: KMagnetostaticAnalyticLineSegmentIntegrator.hh
KEMField/Source/BoundaryIntegrals/Magnetostatic/Analytic/src/: KMagnetostaticAnalyticLineSegmentIntegrator.cc
KEMField/Source/BoundaryIntegrals/Magnetostatic/Core/include/: KMagnetostaticBoundaryIntegrator.hh  KMagnetostaticBoundaryIntegratorFactory.hh  KMagnetostaticElementIntegrator.hh
KEMField/Source/BoundaryIntegrals/Magnetostatic/Core/src/: KMagnetostaticBoundaryIntegrator.cc  KMagnetostaticBoundaryIntegratorFactory.cc
KEMField/Source/FastMultipole/Interface/FieldSolvers/include/: KFMMagnetostaticFastMultipoleFieldSolver.hh
KEMField/Source/FastMultipole/Magnetostatics/: CMakeLists.txt
KEMField/Source/FastMultipole/Magnetostatics/include/: KFMMagnetostaticBoundaryIntegratorEngine_SingleThread.hh  KFMMagnetostaticElement.hh  KFMMagnetostaticElementContainer.hh  KFMMagnetostaticElementContainerBase.hh  KFMMagnetostaticFieldMapper_SingleThread.hh  KFMMagnetostaticLocalCoefficientCalculatorNumeric.hh  KFMMagnetostaticLocalCoefficientFieldCalculator.hh  KFMMagnetostaticLocalCoefficientSet.hh  KFMMagnetostaticMultipoleBatchCalculator.hh  KFMMagnetostaticMultipoleBatchCalculatorBase.hh  KFMMagnetostaticMultipoleCalculator.hh  KFMMagnetostaticMultipoleCalculatorAnalytic.hh  KFMMagnetostaticMultipoleCalculatorNumeric.hh  KFMMagnetostaticMultipoleSet.hh  KFMMagnetostaticNearFieldToLocalCoefficientCalculator.hh  KFMMagnetostaticNode.hh  KFMMagnetostaticNodeInspector.hh  KFMMagnetostaticNodeWorkScoreCalculator.hh  KFMMagnetostaticParameters.hh  KFMMagnetostaticRegionSizeEstimator.hh  KFMMagnetostaticTree.hh  KFMMagnetostaticTreeBuilder.hh  KFMMagnetostaticTreeBuilder_MPI.hh  KFMMagnetostaticTreeData.hh  KFMMagnetostaticTreeInformationExtractor.hh
KEMField/Source/FastMultipole/Magnetostatics/src/: KFMMagnetostaticBoundaryIntegratorEngine_SingleThread.cc  KFMMagnetostaticFieldMapper_SingleThread.cc  KFMMagnetostaticLocalCoefficientCalculatorNumeric.cc  KFMMagnetostaticLocalCoefficientFieldCalculator.cc  KFMMagnetostaticLocalCoefficientSet.cc  KFMMagnetostaticMultipoleBatchCalculator.cc  KFMMagnetostaticMultipoleCalculatorAnalytic.cc  KFMMagnetostaticMultipoleCalculatorNumeric.cc  KFMMagnetostaticMultipoleSet.cc  KFMMagnetostaticNearFieldToLocalCoefficientCalculator.cc  KFMMagnetostaticNodeInspector.cc  KFMMagnetostaticNodeWorkScoreCalculator.cc  KFMMagnetostaticRegionSizeEstimator.cc  KFMMagnetostaticTreeBuilder.cc  KFMMagnetostaticTreeBuilder_MPI.cc  KFMMagnetostaticTreeData.cc
KEMField/Source/FastMultipole/Utility/: CMakeLists.txt
KEMField/Source/FieldSolvers/Integrating/include/: KMagnetostaticIntegratingFieldSolver.hh
KEMField/Source/Interface/BoundaryIntegrators/Magnetic/: CMakeLists.txt
KEMField/Source/Interface/BoundaryIntegrators/Magnetic/include/: KMagnetostaticBoundaryIntegratorPolicy.hh
KEMField/Source/Interface/BoundaryIntegrators/Magnetic/src/: KMagnetostaticBoundaryIntegratorPolicy.cc
KEMField/Source/Interface/FieldSolvers/Magnetic/include/: KMagneticFastMultipoleFieldSolver.hh
KEMField/Source/Interface/FieldSolvers/Magnetic/src/: KMagneticFastMultipoleFieldSolver.cc
KEMField/Source/Interface/Fields/Magnetic/include/: KMagnetostaticBoundaryField.hh
KEMField/Source/Interface/KGeoBag/include/: KGMagnetostaticBoundaryField.hh
Kassiopeia/Applications/Simulation/Source/: Kassiopeia.cxx
Kassiopeia/Bindings/Interactions/Source/: KSIntScatteringBuilder.cxx
Kassiopeia/Geometry/Source/: KSGeoSpace.cxx
Kassiopeia/Operators/Include/: KSParticle.h
Kassiopeia/Operators/Source/: KSParticle.cxx
Kassiopeia/Simulation/Include/: KSRoot.h  KSStep.h
Kassiopeia/Simulation/Source/: KSRoot.cxx  KSRoot.cxx~  KSRootSpaceNavigator.cxx
Kassiopeia/Trajectories/Source/: KSTrajTrajectoryLinear.cxx
Kassiopeia/XML/Examples/: QuadrupoleTrapSimulation.xml  QuadrupoleTrapSimulation.xml~
Kommon/Core/Initialization/: KCommandLineTokenizer.cc  KCommandLineTokenizer.cc~
install/config/Kassiopeia/Complete/: Fields.xml
install/config/Kassiopeia/Examples/: AnalyticSimulation.xml  DipoleTrapSimulation.xml  QuadrupoleTrapSimulation.xml  ToricTrapSimulation.xml
install/config/Kassiopeia/Validation/: TestDiscreteRotationalField.xml  TestField.xml
install/include/: KCommandLineTokenizer.hh
install/lib/cmake/KEMField/: KEMFieldConfig.cmake  KEMFieldConfigVersion.cmake
install/lib/cmake/KGeoBag/: KGeoBagConfig.cmake  KGeoBagConfigVersion.cmake
install/lib/cmake/Kassiopeia/: KassiopeiaConfig.cmake  KassiopeiaConfigVersion.cmake
install/lib/cmake/KassiopeiaMC/: KasperTargets-noconfig.cmake  KasperTargets.cmake
install/lib/cmake/Kommon/: KommonConfig.cmake  KommonConfigVersion.cmake
install/lib/pkgconfig/: KEMField.pc  KGeoBag.pc  Kommon.pc  kassiopeia.pc
